mnt-homeworks/12-08-kuber-config/src/deploy_2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology
  labels:
    app: netology
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netology
  template:
    metadata:
      labels:
        app: netology
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index-conf
          subPath: index.html
          mountPath: /usr/share/nginx/html/index.html
      volumes:
        - name: index-conf
          configMap:
            name: index-conf
