mnt-homeworks/12-08-kuber-config/src/svc_nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: netology-svc
spec:
  ports:
    - name: nginx
      port: 80
      protocol: TCP
  selector:
    app: netology
