mnt-homeworks/12-08-kuber-config/src/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: test.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netology-svc
            port:
              number: 80
  tls:
    - hosts:
      - test.com
      secretName: secret-tls
